--- a/public/css/navbar-style.css
+++ b/public/css/navbar-style.css
@@ -23,6 +23,12 @@ body {
   }
 }
 
+.logo {
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
 .back-btn-div {
   display: flex;
   margin-top: 20px;
@@ -126,7 +132,8 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100vh;
+  height:min-content;
+  padding-bottom: 30px;
 
   @media (max-width: 769px) {
     padding: 0 10px;
@@ -137,7 +144,7 @@ body {
   background-color: rgb(37, 37, 37);
   color: white;
   text-align: left;
-  margin-top: 40px;
+  margin-top: 20px;
   padding: 16px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -154,6 +161,10 @@ body {
   padding-left: 20px;
   padding-top: 12px;
   margin-bottom: 10px;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .alert-success {
@@ -168,4 +179,96 @@ body {
   display: flex;
   padding-top: 12px;
   margin-bottom: 10px;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+#notification-btn {
+  background-color: rgb(37, 37, 37);
+  color: white;
+  border: none;
+  padding: 5px;
+  height: 40px;
+  width: 50px;
+  border-radius: 20px;
+  font-weight: 800;
+  margin-left: 20px;
+  font-size: 16px;
+  text-transform: uppercase;
+  transition: all 0.15;
+}
+
+
+#notification-btn:hover {
+  background-color: rgb(56, 56, 56);
+  cursor: pointer;
+}
+
+#notifications-dropdown {
+    display: none;              
+    position: absolute;
+    top: 60px;                  
+    color: white;
+    background-color: rgb(37, 37, 37);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    min-width: 250px;
+    padding: 10px;
+    font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+
+.notification-item {
+    border-bottom: 1px solid #f0f0f0;
+    padding: 8px 0;
+    background-color: rgb(37, 37, 37);
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    justify-content: space-between;
+}
+
+.notification-item.read {
+    background-color: rgb(37, 37, 37);  /* Example: Light gray background */
+}
+
+.notification-item:last-child {
+    border-bottom: none; /* Remove border from the last item */
+}
+
+.mark-read {
+    background-color: #1c1a1a; 
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px; 
+    margin-left: 10px;
+}
+
+.no-notifications {
+  text-align: center;
+  padding: 10px;
+  color: gray; 
+} 
+
+
+.btn-kkas {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 20px;
+  text-decoration: none; 
+  font-size: 14px; 
+  font-family: sans-serif; 
+  text-transform: uppercase; 
+  font-weight: 800;
 }
