--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -10,6 +10,10 @@ body {
   padding: 50px;
   justify-content: center;
   align-items: center;
+
+  @media(max-width: 640px) {
+    padding: 50px 5px;
+  }
 }
 
 .logo {
@@ -54,30 +58,37 @@ body {
 }
 
 .alert-danger {
+  display: flex;
   color: red;
-  font-size: 14px;
   margin-top: 5px;
   width: 100%;
   background-color: #2b0909;
-  height: 46px;
+  height: 36px;
   border-radius: 20px;
-  padding-left: 10px;
-  padding-top: 10px;
+  padding-left: 20px;
+  padding-top: 15px;
   margin-bottom: 10px;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .alert-success {
   color: green;
-  font-size: 14px;
   margin-top: 5px;
   width: 100%;
   background-color: #072907;
   height: 46px;
   border-radius: 20px;
-  padding-left: 10px;
+  padding-left: 20px;
   display: flex;
-  padding-top: 3%;
+  padding-top: 12px;
   margin-bottom: 10px;
+  font-family: sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 
