--- a/public/css/navbar-style.css
+++ b/public/css/navbar-style.css
@@ -198,11 +198,11 @@ body {
   border: none;
   padding: 5px;
   height: 40px;
-  width: 50px;
+  width: 40px;
   border-radius: 20px;
   font-weight: 800;
   margin-left: 20px;
-  font-size: 16px;
+  font-size: 20px;
   text-transform: uppercase;
   transition: all 0.15;
 }
@@ -229,7 +229,6 @@ body {
     font-weight: 700;
 }
 
-
 .notification-item {
     border-bottom: 1px solid #f0f0f0;
     padding: 8px 0;
@@ -241,21 +240,21 @@ body {
 }
 
 .notification-item.read {
-    background-color: rgb(37, 37, 37);  /* Example: Light gray background */
+    background-color: rgb(37, 37, 37); 
 }
 
 .notification-item:last-child {
-    border-bottom: none; /* Remove border from the last item */
+    border-bottom: none; 
 }
 
 .mark-read {
     background-color: #1c1a1a; 
     color: white;
     border: none;
-    padding: 5px 10px;
+    padding: 8px 8px;
     border-radius: 20px;
     cursor: pointer;
-    font-size: 16px; 
+    font-size: 20px; 
     margin-left: 10px;
 }
 
@@ -280,10 +279,33 @@ body {
   font-weight: 800;
 }
 
+.btn-dashboard {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  display: flex;
+  width: 200px;
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 20px;
+  text-decoration: none; 
+  font-size: 14px; 
+  font-family: sans-serif; 
+  text-transform: uppercase; 
+  font-weight: 800;
+}
+
+#dashboardIcon {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
 .badge {
   background-color: red;
   border-radius: 20px;
-  width: 20px;
+  width: 24px;
+  height: 24px;
+  font-size: 16px;
   position: absolute;
-  top: 15;
+  top: 10;
 }
