--- a/public/css/pdf-view.css
+++ b/public/css/pdf-view.css
@@ -70,7 +70,7 @@
 
 .notes-name {
   background-color: rgb(37, 37, 37);
-  height: 7%;
+  height: 55px;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   @media (max-width: 769px) {
