--- a/public/css/navbar-style.css
+++ b/public/css/navbar-style.css
@@ -17,7 +17,9 @@ body {
 .navbar {
   display: flex;
   height: 80px;
-  padding: 0px 50px;
+  padding: 10px;
+  max-width: 1350px;
+  margin: 0 auto;
   @media (max-width: 769px) {
     padding: 0 10px;
   }
@@ -133,12 +135,17 @@ body {
   cursor: pointer;
 }
 
+
+
+
+
 .main-container {
   background-color: #1c1a1a;
-  padding: 0 50px;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  padding: 10px;
+  max-width: 1350px;
+  margin: 0 auto;
   height:min-content;
   padding-bottom: 30px;
 
