--- a/public/css/allbooks-style.css
+++ b/public/css/allbooks-style.css
@@ -7,6 +7,7 @@
     grid-gap: 20px; 
     justify-content: start; 
     padding: 20px; 
+    margin-bottom: 20px;
 }
 
 .pdf-item {
@@ -39,7 +40,10 @@ color: rgb(255, 255, 255);
 
 .info-category {
 margin-bottom: 10px; 
-font-size: 14px;  
+font-size: 12px;  
+font-family: sans-serif;
+font-weight: 800;
+text-transform: uppercase;
 color: rgb(255, 255, 255);
 }
   .download-btn {
@@ -58,6 +62,10 @@ color: rgb(255, 255, 255);
   
   .view-btn {
     display: inline-flex;
+    width: 100%;
+    align-content: center;
+    justify-content: center;
+    margin: 0px;
     border: 1px solid rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -67,6 +75,11 @@ color: rgb(255, 255, 255);
     font-size: 12px;
     text-transform: uppercase;
     text-decoration: none;
+  }
+
+  .view-btn:hover {
+    opacity: 0.7;
+    cursor: pointer;
   }
 
   .favorite-btn {
@@ -125,7 +138,7 @@ color: rgb(255, 255, 255);
     display: flex;
     bottom: 0;
     left: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .thumbnail img {
