--- a/public/css/navbar-style.css
+++ b/public/css/navbar-style.css
@@ -40,13 +40,13 @@ body {
   position: absolute;
   height: 40px;
   width: 40px;
+  font-size: 24px;
   background: white;
   text-align: center;
   color: black;
   line-height: 40px;
   border-radius: 50%;
   cursor: pointer;
-  font-size: 1.25rem;
 }
 
 .user-btn {
@@ -303,7 +303,6 @@ body {
   color: rgb(0, 0, 0);
   padding: 10px;
   border-radius: 20px;
-  margin-top: 20px;
   text-decoration: none; 
   font-size: 14px; 
   font-family: sans-serif; 
